@@ -1,5 +1,6 @@
 package ru.hse.software.design.commands;
 
+import org.apache.commons.lang3.SystemUtils;
 import ru.hse.software.design.Environment;
 import ru.hse.software.design.Path;
 
@@ -8,26 +9,33 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
+import java.util.Objects;
 
 /**
- * Class which represents outer command, extends Command.
- * Contains command with its arguments as a list and path to command as a private fields.
- * Also overrides 'execute' method.
+ * Executes outer command in a separate process.
  **/
 public class OuterCommand extends Command {
     private final List<String> commandWithArguments = new ArrayList<>();
     private final Path path;
 
     /**
-     * Makes commandName, commandArgs, path same as given values.
-     * Also initialize command with the given command name.
+     * Creates outer command with given arguments.
      *
      * @param commandName command name
      * @param commandArgs command arguments
      * @param path        path to command
      **/
     public OuterCommand(String commandName, List<String> commandArgs, Path path) {
-        this.commandWithArguments.add(commandName);
+        if (SystemUtils.IS_OS_WINDOWS) {
+            commandName = commandName + ".exe";
+            this.commandWithArguments.add(commandName);
+            if (Objects.equals(commandName, "cmd.exe")) {
+                this.commandWithArguments.add("/C");
+            }
+        } else {
+            this.commandWithArguments.add(commandName);
+        }
         this.commandWithArguments.addAll(commandArgs);
         this.path = path;
         this.command = commandName;
@@ -35,14 +43,13 @@ public class OuterCommand extends Command {
 
     /**
      * Executes the given outer command with the given arguments.
-     * In case of error writes an appropriate message to the error stream.
      *
-     * @return 1 in case of successful outcome of the command, 0 otherwise
+     * @param input input as string
+     * @return 0 in case of successful outcome of the command, 1 otherwise
      **/
     @Override
     public int execute(String input) {
-        String[] cmdarray = commandWithArguments.toArray(new String[0]);
-        String[] envp = Environment.getAll();
+        String[] commandArray = commandWithArguments.toArray(new String[0]);
         String commandDirectory = null;
         for (var directory : path.getPaths()) {
             if (new File(directory, command).exists()) {
@@ -50,11 +57,18 @@ public class OuterCommand extends Command {
             }
         }
         if (commandDirectory == null) {
+            if (SystemUtils.IS_OS_WINDOWS) {
+                errorStream.println("Command " + command.substring(0, command.length() - 4) + " not found");
+                return 1;
+            }
             errorStream.println("Command " + command + " not found");
             return 1;
         }
         try {
-            Process process = Runtime.getRuntime().exec(cmdarray, envp, new File(commandDirectory));
+            var processBuilder = new ProcessBuilder(commandArray);
+            Map<String, String> environment = processBuilder.environment();
+            environment.putAll(Environment.getAll());
+            var process = processBuilder.start();
             process.getOutputStream().write(input.getBytes(StandardCharsets.UTF_8));
             int returnCode = process.waitFor();
             output = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
